--- a/index.html
+++ b/index.html
@@ -419,6 +419,74 @@
           </div>
         </section>
 
+        <!-- News Section -->
+        <section class="news-in-films">
+          <h2>Новости кино</h2>
+
+          <article class="news-in-films-item">
+            <h3>
+              <a href="#">Кейт Бекинсейл представила фильм "Другой мир: Войны крови"</a>
+            </h3>
+            <div class="row">
+              <div class="col-lg-4">
+                <div class="news-in-films-item__thumbnail thumbnail">
+                  <img class="news-in-films-item__image" src="assets/img/news/news-1.jpg" alt="image">
+                </div>
+              </div>
+              <div class="col-lg-8">
+                <p class="news-in-films-item__text">Кейт Бекинсейл представила в Мексике свой новый фильм "Другой мир:
+                  Войны крови". На красной дорожке актриса позировала фотографам в роскошном красном платье. В фильме
+                  речь пойдет о Селене - Воительница-вампир Селена вступает в свой последний и решающий бой между
+                  оборотнями и кланом вампиров, который предал ее. В украинских кинотеатрах картину можно увидеть с 1
+                  декабря...</p>
+                <a class="news-in-films-item__btn btn btn-warning" href="#">Подробней</a>
+              </div>
+            </div>
+          </article>
+
+          <article class="news-in-films-item">
+            <h3>
+              <a href="#">Критики Нью-Йорка выбрали лучший фильм 2016 года</a>
+            </h3>
+            <div class="row">
+              <div class="col-lg-4">
+                <div class="news-in-films-item__thumbnail thumbnail">
+                  <img class="news-in-films-item__image" src="assets/img/news/news-2.jpg" alt="image">
+                </div>
+              </div>
+              <div class="col-lg-8">
+                <p class="news-in-films-item__text">Им стал мюзикл "Ла-Ла Ленд", который снял режиссер Дэмьен Шазелл.
+                  Лучшим актером года был признан Кейси Аффлек, сыгравший в картине "Манчестер у моря", а в аналогичной
+                  женской категории победа была присуждена Изабель Юппер снимавшаяся в фильме "Она". Лучшей актрисой
+                  второго плана названа Мишель Уильямс, сыгравшая в драме "Некоторые женщины", а лучшим актером второго
+                  плана - Махершалалхашбаз Али за роль в картине "Лунный свет"...</p>
+                <a class="news-in-films-item__btn btn btn-warning" href="#">Подробней</a>
+              </div>
+            </div>
+          </article>
+
+          <article class="news-in-films-item">
+            <h3>
+              <a href="#">Крис Прэтт и Дженнифер Лоуренс представили "Пассажиров" в Париже</a>
+            </h3>
+            <div class="row">
+              <div class="col-lg-4">
+                <div class="news-in-films-item__thumbnail thumbnail">
+                  <img class="news-in-films-item__image" src="assets/img/news/news-3.jpg" alt="image">
+                </div>
+              </div>
+              <div class="col-lg-8">
+                <p class="news-in-films-item__text">Хотя до премьеры "Пассажиров" остается еще почти месяц, промо-тур в
+                  поддержку нового фильма уже начался: Крис Прэтт и Дженнифер Лоуренс, исполнившие в фильме главные
+                  роли, представили "Пассажиров" в рамках фотоколла в Париже. В кинотеатрах "Пассажиры" появятся под
+                  занавес 2016 года – 22 декабря...</p>
+                <a class="news-in-films-item__btn btn btn-warning" href="#">Подробней</a>
+              </div>
+            </div>
+          </article>
+
+        </section>
+
       </main>
 
       <aside class="left-sidebar col-lg-3 col-lg-pull-9 col-md-4 col-md-pull-8">
